--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="lyosha.doronin@gmail.com">alexej</maintainer>
+  <maintainer email="lyosha.doronin@gmail.com">cyanidle</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -70,6 +70,7 @@
   <exec_depend>rosserial_arduino</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>ebot_msgs</exec_depend> 
 
 
   <!-- The export tag contains other, unspecified, tags -->
