--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,8 @@
   <build_depend>rosserial_arduino</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>map_msgs</build_depend>
+  <build_depend>map_msgs</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -71,7 +73,8 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>ebot_msgs</exec_depend> 
-  <exec_depend>map_msgs</exec_depend> 
+  <exec_depend>map_msgs</exec_depend>
+  <exec_depend>pypng</exec_depend> 
 
 
   <!-- The export tag contains other, unspecified, tags -->
