--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,7 +167,7 @@ CATKIN_DEPENDS python-numpy pypng map_msgs geometry_msgs nav_msgs roscpp rospy r
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  src/DorLib.py #src/global_planer.py src/local_planer.py src/costmap_server.py src/motors_info_callback.py
+  libraries/DorLib.py #src/global_planer.py src/local_planer.py src/costmap_server.py src/motors_info_callback.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
