битва была равна

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,12 @@ catkin_python_setup()
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ebobot
-CATKIN_DEPENDS python-numpy pypng map_msgs geometry_msgs nav_msgs roscpp rospy rosserial_arduino sensor_msgs std_msgs
+CATKIN_DEPENDS python-numpy map_msgs geometry_msgs nav_msgs roscpp rospy rosserial_arduino sensor_msgs std_msgs
 #  DEPENDS system_lib
 )
 
-# catkin_install_python(PROGRAMS
-#   scripts/pid_setter.py nodes/motors_info_callback.py nodes/move_base.py#nodes/costmap_server nodes/global_planer nodes/local_planer nodes/motors_info_callback 
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+catkin_install_python(PROGRAMS
+  scripts/pid_setter.py nodes/motors_info_callback.py nodes/move_base.py #src/costmap_server.py src/global_planer.py src/local_planer.py src/Dorlib.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
