--- a/package.xml
+++ b/package.xml
@@ -75,7 +75,10 @@
   <exec_depend>ebot_msgs</exec_depend> 
   <exec_depend>map_msgs</exec_depend>
   <exec_depend>python-numpy</exec_depend>
-
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
