--- a/package.xml
+++ b/package.xml
@@ -74,11 +74,14 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>ebot_msgs</exec_depend> 
   <exec_depend>map_msgs</exec_depend>
-  <exec_depend>python-numpy</exec_depend>
+  <build_depend>python3-numpy</build_depend>
+  <exec_depend>python3-numpy</exec_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <exec_depend>actionlib</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
+  <build_depend>python3-pyyaml</build_depend>
+  <exec_depend>python3-pyyaml</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
