--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,20 +12,40 @@ find_package(catkin REQUIRED COMPONENTS
   genmsg 
   actionlib_msgs 
   actionlib
+  rosserial_arduino
+  rosserial_client
 )
  
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 catkin_python_setup()
+################## В этом месте мы опять получаем по ебалу от негров
+rosserial_generate_ros_lib(
+  PACKAGE rosserial_arduino
+  SCRIPT make_libraries.py
+)
+######## Ну или пытаемся скомпилировать и загрузить прошивку автоматически
+rosserial_configure_client(
+  DIRECTORY firmware
+  TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
+)
+########
+rosserial_add_client_target(firmware main ALL)
+rosserial_add_client_target(firmware main-upload)
 ################################################
- add_message_files(
+add_message_files(
    FILES
+   PID.msg
    Obstacle.msg
    Obstacles.msg
   )
 add_action_files(
   DIRECTORY action 
   FILES Move.action
+  )
+add_service_files(
+    FILES
+    Servos.srv
   )
 generate_messages(
   DEPENDENCIES
