--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,19 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 catkin_python_setup()
-################## В этом месте мы опять получаем по ебалу от негров
-rosserial_generate_ros_lib(
-  PACKAGE rosserial_arduino
-  SCRIPT make_libraries.py
-)
-######## Ну или пытаемся скомпилировать и загрузить прошивку автоматически
-rosserial_configure_client(
-  DIRECTORY firmware
-  TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
-)
-########
-rosserial_add_client_target(firmware main ALL)
-rosserial_add_client_target(firmware main-upload)
+
 ################################################
 add_message_files(
    FILES
@@ -68,3 +56,19 @@ catkin_install_python(PROGRAMS
   nodes/task_manager.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+
+################## В этом месте мы опять получаем по ебалу от негров
+rosserial_generate_ros_lib(
+  PACKAGE rosserial_arduino
+  SCRIPT make_libraries.py
+)
+
+######## Ну или пытаемся скомпилировать и загрузить прошивку автоматически
+rosserial_configure_client(
+  DIRECTORY firmware
+  TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
+)
+########
+rosserial_add_client_target(firmware main ALL)
+#rosserial_add_client_target(firmware main-upload)
