should be working besides task manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,17 +60,17 @@ catkin_install_python(PROGRAMS
 )
 
 message(STATUS "Tvoya mama")
-################## В этом месте мы опять получаем по ебалу от негров
-# rosserial_generate_ros_lib(
-#   PACKAGE rosserial_arduino
-#   SCRIPT make_libraries.py
-# )
+################# В этом месте мы опять получаем по ебалу от негров
+rosserial_generate_ros_lib(
+  PACKAGE rosserial_arduino
+  SCRIPT make_libraries.py
+)
 
-# ######## Ну или пытаемся скомпилировать и загрузить прошивку автоматически
-# rosserial_configure_client(
-#   DIRECTORY firmware
-#   TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
-# )
-# ########
-# rosserial_add_client_target(firmware main ALL)
-# rosserial_add_client_target(firmware main-upload)
+######## Ну или пытаемся скомпилировать и загрузить прошивку автоматически
+rosserial_configure_client(
+  DIRECTORY firmware
+  TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
+)
+########
+#rosserial_add_client_target(firmware main ALL)
+#rosserial_add_client_target(firmware main-upload)
