task manager wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,9 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ebobot
-CATKIN_DEPENDS python3-numpy map_msgs geometry_msgs nav_msgs roscpp rospy rosserial_arduino sensor_msgs std_msgs message_runtime python3-pyyaml 
+CATKIN_DEPENDS python3-numpy map_msgs geometry_msgs 
+nav_msgs roscpp rospy rosserial_arduino sensor_msgs 
+std_msgs message_runtime python3-pyyaml python3-asyncio
 #  DEPENDS system_lib
 )
 catkin_install_python(PROGRAMS
