--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ catkin_install_python(PROGRAMS
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-message(STATUS "Tvoya mama")
+message(STATUS "TVOYA MAMA")
 ################# В этом месте мы опять получаем по ебалу от негров
 rosserial_generate_ros_lib(
   PACKAGE rosserial_arduino
