--- a/config/routes/example_route.yaml
+++ b/config/routes/example_route.yaml
@@ -10,7 +10,8 @@ tasks:
   1:
     - call: "test"
     - move: "1/1"
-    - log: "L:Moving to 1m/1m" #Prefixes (L:/W:/E:) = (Log, Warn, Error)
+    - log: "L:Moving to 1m/1m" 
+    #Prefixes (L:/W:/E:) = (Log, Warn, Error)
   2:
     - call: "test3"
     - together: 
@@ -30,5 +31,5 @@ tasks:
   3: 
     - call: "test4"
     - interrupt: "2"
-    
+
         
