--- a/config/routes/calls_dict.yaml
+++ b/config/routes/calls_dict.yaml
@@ -1,4 +1,5 @@
 #Available services: servos_service
+"Static":
 "ArmUp":
 - "servos_service":
   - "num": 0
@@ -20,3 +21,11 @@
 - "servos_service":
   - "num": 2
   - "state": 0
+
+"Dynamic":
+"Example":
+  - custom_arg1
+  - custom_arg2
+"Move_servo":
+  - "num"
+  - "state"
