--- a/config/calls/calls_dict.yaml
+++ b/config/calls/calls_dict.yaml
@@ -22,8 +22,17 @@
       - "num": 2
       - "state": 0
 
+  - "OhmsWithServos":
+    - "servos_service":
+      - "num": 3
+      - "state": 0
+    - "servos_service":
+      - "num": 4
+      - "state": 1
+    - "ohm_reader_sevice":
+      - "pin": 1
 "Dynamic": #plain call of service, but one at a time!
-  - "Example": #with args!
+  - "Example": #with kwargs!
     - service1
     - service2
   - "Move_servo":
