--- a/config/nodes/costmap_server.yaml
+++ b/config/nodes/costmap_server.yaml
@@ -1,8 +1,10 @@
 costmap_server:
-  inflation_rad: 30
-  base_inflation_coeff: 0.0027
+  inflation_radius: 0.2 #in meters
+  base_inflation_coeff: 0.001
   inflate_enable: 1
   write_map_enable: 1
-  update_rate: 2
+  update_rate: 4 #per seconds
   obstacles/base_infaltion_coeff: 150
   obstacles/use_default: 1
+  interpolation_radius: 1 #in cells
+  publish_on_obstacles_recieve: 1 #republish map only when recieving new list of obstacles
