--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,18 +64,18 @@ catkin_install_python(PROGRAMS
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-message(STATUS "TVOYA MAMA")
-################# В этом месте мы опять получаем по ебалу от негров
-rosserial_generate_ros_lib(
-  PACKAGE rosserial_arduino
-  SCRIPT make_libraries.py
-)
+########### Данная часть не нужна
+# ################# В этом месте мы опять получаем по ебалу от негров
+# rosserial_generate_ros_lib(
+#   PACKAGE rosserial_arduino
+#   SCRIPT make_libraries.py
+# )
 
-######## Ну или пытаемся скомпилировать и загрузить прошивку автоматически
-rosserial_configure_client(
-  DIRECTORY firmware
-  TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
-)
-######## Evil
-#rosserial_add_client_target(firmware main ALL)
-#rosserial_add_client_target(firmware main-upload)
+# ######## Ну или пытаемся скомпилировать и загрузить прошивку автоматически
+# rosserial_configure_client(
+#   DIRECTORY firmware
+#   TOOLCHAIN_FILE ${ROSSERIAL_ARDUINO_TOOLCHAIN}
+# )
+# ######## Evil
+# #rosserial_add_client_target(firmware main ALL)
+# #rosserial_add_client_target(firmware main-upload)
