--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -1,5 +1,6 @@
 laser_scan_callback:
-  update_rate: 10
+  update_rate: 1
+  rads_offset: 0
   beacons:
     adjust_on_command: 1
     cycles_per_update: 4
@@ -10,11 +11,11 @@ laser_scan_callback:
     pub_all: 1
     num_beacons: 3 #needed for proper auto-init
     beacon0:
-  - 0.02 #meters, y
-  - 1    #meters, x
+      - 0.02 #meters, y
+      - 1    #meters, x
     beacon1:
-  - 2.99
-  - 0.01
+      - 2.99
+      - 0.01
     beacon2:
-  - 2.99
-  - 1.99
+      - 2.99
+      - 1.99
