--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,8 @@ catkin_install_python(PROGRAMS
   nodes/task_manager.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
-
+message("INSTALLING FIRMWARE...")   
+execute_process(COMMAND bash -c "${PROJECT_SOURCE_DIR}/firmware/install.sh")
 ########### Данная часть не нужна
 # ################# В этом месте мы опять получаем по ебалу от негров
 # rosserial_generate_ros_lib(
