--- a/config/nodes/costmap_server.yaml
+++ b/config/nodes/costmap_server.yaml
@@ -1,10 +1,19 @@
 costmap_server:
+  # Features
+  publish_on_obstacles_recieve: 1 #republish map only when recieving new list of obstacles, overrides update_rate
+  inflate_enable: 1 #use map directly, or inflate it beforehand
+  write_map_enable: 1 #write inflated map and mask (mask is for debug)
+  interpolate_enable: 1
+  inflation_nonlinear_enable: 0 #not tested btw)
+  #
+  resolution: 0.02 #meters/cell. Better not to touch
   inflation_radius: 0.2 #in meters
-  base_inflation_coeff: 0.001
-  inflate_enable: 1
-  write_map_enable: 1
-  update_rate: 4 #per seconds
-  obstacles/base_infaltion_coeff: 150
-  obstacles/use_default: 1
+  base_inflation_coeff: 0.001 #slight change = zhopa
+  inflation_threshhold: 80 #inflate cell if its cost is > than 'n'
+  update_rate: 2 #per seconds, if pub_on_obst_recieve disabled
   interpolation_radius: 1 #in cells
-  publish_on_obstacles_recieve: 1 #republish map only when recieving new list of obstacles
+  #################################
+  obstacles:
+    base_infaltion_coeff: 150
+    use_default: 1
+  
