--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -1,14 +1,36 @@
 laser_scan_callback:
   update_rate: 10
   rads_offset: 0
+  minimal_x: -0.2
+  minimal_y: -0.2
+  maximum_x: 2.4
+  maximum_y: 3.4
+  skip_scans: 0
+  ################
+  obstacles:
+    minimal_x: 0.05
+    minimal_y: 0.05
+    maximum_x: 2
+    maximum_y: 3
+    ####
+    radius_coeff: 1.2
+    dots_thresh: 140
+    min_dots: 4
+    safe_footprint_radius: 0.2 #Minimal raidius around obstacles (if not default)
+  ################
   beacons:
+    ## Features
+    max_th_for_linear_adj: 0.01
     adjust_on_command: 1
+    pub_all: 1
+    only_linear_adj: 0
+    ##
     cycles_per_update: 2
     min_rad: 0.005
     max_rad: 0.25
     max_dist_from_expected: 0.3
     adjust_time: 2
-    pub_all: 1
+    
     num_beacons: 3 #needed for proper auto-init
     beacon0:
       - 0.02 #meters, y
