--- a/config/routes/test_route.yaml
+++ b/config/routes/test_route.yaml
@@ -7,7 +7,7 @@ tasks:
     - move: 1.5/1/3.14
     - score: -5
     - dynamic_call:
-      - servos_service
+      - MoveServo
       - num: 0
       - state: 1
     - sleep: 1
@@ -18,4 +18,8 @@ tasks:
   return:
     - move: 1/1.5/0
     - score: 10
-interrupts:
+
+interrupts: 
+  return_to_base:
+    - interrupt_condition: "timer/route/90"
+    - move: 1/0.2/1.5
