--- a/config/routes/test_route.yaml
+++ b/config/routes/test_route.yaml
@@ -21,5 +21,5 @@ tasks:
 
 interrupts: 
   return_to_base:
-    - interrupt_condition: "timer/route/90"
+    - interrupt_condition: "timer/main/50"
     - move: 1/0.2/1.5
