--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,9 @@ catkin_install_python(PROGRAMS
   nodes/new_task_manager.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
-message("Pls install firmware with firmware/install.sh script...")   
+message("#########################################################")
+message("Pls install firmware with 'bash firmware/install.sh' script...")
+message("#########################################################")
 #exec_program("${PROJECT_SOURCE_DIR}/firmware/install.sh")
 #exec_program(bash "${PROJECT_SOURCE_DIR}/firmware/" "install.sh")
 ########### Данная часть не нужна
