--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -1,5 +1,5 @@
 global_planer: #almost everything is in cells, which depends on costmap resolution
-  maximum_cost: 80 #Most important
+  maximum_cost: 12 #Most important
   maximum_jumps: 1000
   # Features
   cleanup_feature: 1
@@ -7,6 +7,7 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
   stuck_check_feature: 1
   experimental_cleanup_enable: 1
   #
+  twist_amplify_coeff: 0.5
   consecutive_jumps_threshhold: 2 #Leave a target each 'n' straight hops
   update_stop_thresh: 8 # Dist from target, when stops updating route
   step: 2
@@ -40,6 +41,8 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
     fail_times: 3
 ##################################
 local_planer:
+  twist_amplify_coeff: 0.5 #depends on resolution, allows to skip points behind
+  inertia_compensation_coeff: 0.05 #allows for shrap turns (in theory)
   # Important
   cost_threshhold: 10000 #100 are walls, then there is inflation
   safe_footprint_radius: 0.20
@@ -54,7 +57,7 @@ local_planer:
   pause_before_turn: 0.2 #seconds
   turn_threshhold: 0.05 
   cells_per_radian: 5
-  turn_coeff: 0.25
+  turn_coeff: 0.35
   min_turn_coeff: 0.28 #final!
   #speed coeffs
   static_coeff:  0.4
