--- a/config/nodes/costmap_server.yaml
+++ b/config/nodes/costmap_server.yaml
@@ -1,17 +1,18 @@
 costmap_server:
   # Features
   publish_on_obstacles_recieve: 1 #republish map only when recieving new list of obstacles, overrides update_rate
-  inflate_enable: 0 #use map directly, or inflate it beforehand
+  inflate_enable: 1 #use map directly, or inflate it beforehand
   write_map_enable: 0 #write inflated map and mask (mask is for debug)
-  interpolate_enable: 0
+  interpolate_enable: 1
   inflation_nonlinear_enable: 0 #not tested btw)
   #
+  inflation_skip_cells: 3
   resolution: 0.02 #meters/cell. Better not to touch
   inflation_radius: 0.27 #in meters
   base_inflation_coeff: 0.013 #slight change = zhopa
   inflation_threshhold: 99 #inflate cell if its cost is > than 'n'
-  update_rate: 2 #per seconds, if pub_on_obst_recieve disabled
-  interpolation_radius: 1 #in cells
+  update_rate: 2 #per seconds, if publish_on_obstacles_recieve disabled
+  interpolation_radius: 3 #in cells
   #################################
   obstacles:
     use_default: 1
